--- a/app/templates/min1/index.html
+++ b/app/templates/min1/index.html
@@ -8,8 +8,8 @@
             <div class="col-lg-7">
                 <div class="banner_text">
                     <div class="banner_text_iner">
-                        <h5>Best way to tour</h5>
-                        <h1>Lorem ipsum dolor amet consec</h1>
+                        <h5 style = "font-family: 'BinggraeMelona'" >민 number1 </h5>
+                        <h1>지역의 문제점을 공유하고 투표를 통해 간편하게 민원신청하세요!</h1>
                     </div>
                 </div>
             </div>
@@ -28,22 +28,16 @@
                         <div class="form-row">
                             <div class="col-lg-9">
                                 <div class="search_form_iner">
-                                    <select class="custom_select" id="inlineFormCustomSelect">
-                                        <option selected>country</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
-                                    </select>
                                     <select class="custom_select" id="inlineFormCustomSelect1">
-                                        <option selected>city</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
+                                        <option selected>지역을 선택하세요!</option>
+                                        <option value="1">종로구</option>
+                                        <option value="2">강남구</option>
+                                        <option value="3">강동구</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-lg-3">
-                                <a href="#" class="search_btn">search</a>
+                                <a href="#" class="search_btn">작성하기!</a>
                             </div>
                         </div>
                     </form>
@@ -52,33 +46,27 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-sm-6">
-                <div class="single_donation_item">
-                    <img src="img/icon/money_bag.svg" alt="#">
-                    <h4>donation</h4>
+                <div class="single_donation_item">   
+                    <h4>컨텐츠</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing 
-                    elit sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna </p>
-                    <a href="#" class="read_btn">read more</a>
+                    lit sed do eiusmod tempor incididunt ut labore et 
+                    dolore magna </p>        
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="single_donation_item">
-                    <img src="img/icon/money_bag.svg" alt="#">
-                    <h4>donation</h4>
+                    <h4>컨텐츠</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing 
                     elit sed do eiusmod tempor incididunt ut labore et 
                     dolore magna </p>
-                    <a href="#" class="read_btn">read more</a>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="single_donation_item">
-                    <img src="img/icon/money_bag.svg" alt="#">
-                    <h4>donation</h4>
+                    <h4>컨텐츠</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing 
                     elit sed do eiusmod tempor incididunt ut labore et 
                     dolore magna </p>
-                    <a href="#" class="read_btn">read more</a>
                 </div>
             </div>
         </div>
@@ -86,5 +74,5 @@
     <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1">
     <img src="img/animate_icon/Shape-2.png" alt="" class="feature_icon_2">
 </section>
-<!-- banner part start-->
+<!— banner part start—>
 {% endblock %}
