--- a/userapp/templates/base.html
+++ b/userapp/templates/base.html
@@ -52,7 +52,15 @@
         {% endblock footer %}
 
     {% endblock content %}
-
+    {% if user.is_authenticated %}
+        <a class="dropdown-item">{{ user.username }}님 환영합니다.</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">내 정보 보기</a>
+        <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">로그아웃 하기</a>
+    {% else %}
+        <a class="dropdown-item" href="{% url 'login' %}">로그인 하기</a>
+        <a class="dropdown-item" href="{% url 'register' %}">회원가입 하기</a>
+    {% endif %}
 </div>
 
 
