--- a/userapp/templates/register.html
+++ b/userapp/templates/register.html
@@ -48,6 +48,12 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <div class="form-label-group">
+                                    <input name="nickname" type="text" id="nickname" class="form-control" required="required">
+                                    <label for="address">닉네임</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <div class="form-row">
                                     <div class="col-md-6">
                                         <div class="form-label-group">
@@ -66,7 +72,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="{% url 'index' %}"><input type="submit" class="btn btn-primary btn-block" value="회원가입 완료"></a>
+                            <input type="submit" class="btn btn-primary btn-block" value="회원가입 완료">
                         </form>
                         <div class="text-center">
                             <a class="d-block small mt-3" href="{% url 'login' %}">로그인 하기</a>
