--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,11 @@
                                 </li>
                             </ul>
                         </div>
-                        <a class="btn_1 d-none d-lg-block" href="#">로그인</a>
+                        {% if user.is_activate %}
+                        {{user.username}}님 환영합니다!
+                        {% else%}
+                        <a class="btn_1 d-none d-lg-block" href="">로그인</a>
+                        {% endif %}
                     </nav>
                 </div>
             </div>
