--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                         {% if user.is_activate %}
                         {{user.username}}님 환영합니다!
                         {% else%}
-                        <a class="btn_1 d-none d-lg-block" href="">로그인</a>
+                        <a class="btn_1 d-none d-lg-block" href="{% url 'login'%}">로그인</a>
                         {% endif %}
                     </nav>
                 </div>
