footer and color change

--- a/app/templates/min1/index.html
+++ b/app/templates/min1/index.html
@@ -52,8 +52,9 @@
         <div class="row">
             <div class="banner_text_iner">
             <div id="info">
-                <h3>민 Number 1</h3>
-                <p>편리한 온라인 행정 서비스를 제공하는 민 Number 1을 통하여 각 지역에서 일어나는 여러가지 문제점을 공론화하세요!<br>
+                <h3 style="color:#0080FF">MIN Number 1</h3>
+                <p>편리한 온라인 행정 서비스를 제공하는 
+                <span style="color:#0080FF">민 넘버 원</span>을 통하여 각 지역에서 일어나는 여러가지 문제점을 공론화하세요!<br>
                 다른 사용자들의 공감과 동의를 얻으면 민원을 의회로 전송하여 특정한 행정 조치를 요구할 수 있습니다.<br>
                 </p>
             </div>
