--- a/templates/base.html
+++ b/templates/base.html
@@ -92,11 +92,12 @@
     <!--::footer_part start::-->
     <footer class="footer_part">
         <div class="container">
-            <div class="row">
-                <h4>Min number 1 </h4>
+            <hr>
+            <div class="row" style="margin:auto;">
+                <h4 style="color:#0080FF">Min number 1 </h4>
                 <p> 국민 곁의 편리한 민원 파트너 민 넘버 원과 함께 편안한 하루 보내세요!</p>
             </div>
-            <hr>
+
             <div class="row">
                 <div class="col-lg-8">
                     <div class="copyright_text">
