--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -3802,7 +3802,7 @@ ul {
 .footer_part {
   padding: 180px 0px 25px;
   position: relative;
-  background-color: #FBF8EF;
+  background-color: #00c0ff;
 }
 
 @media (max-width: 991px) {
@@ -3810,7 +3810,7 @@ ul {
   .footer_part {
     padding: 70px 0px 25px;
     position: relative;
-    background-color: #FBF8EF;
+    background-color: #00c0ff;
   }
 }
 
@@ -3819,7 +3819,7 @@ ul {
   .footer_part {
     padding: 80px 0px 25px;
     position: relative;
-    background-color: #FBF8EF;
+    background-color: #00c0ff;
   }
 }
 
