--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2654,7 +2654,7 @@ ul {
 
 /* line 49, /Applications/MAMP/htdocs/palash/cl/july 2019/189 travel/189 travel html/sass/_search.scss */
 .search_your_country .search_form .search_form_iner .custom_select {
-  width: 100%;
+  width: 50%;
   border: 0px solid transparent;
   border-radius: 0;
   color: #c3c3c3;
@@ -3802,12 +3802,15 @@ ul {
 .footer_part {
   padding: 180px 0px 25px;
   position: relative;
+  background-color: #00c0ff;
 }
 
 @media (max-width: 991px) {
   /* line 2, /Applications/MAMP/htdocs/palash/cl/july 2019/189 travel/189 travel html/sass/_footer.scss */
   .footer_part {
     padding: 70px 0px 25px;
+    position: relative;
+    background-color: #00c0ff;
   }
 }
 
@@ -3815,6 +3818,8 @@ ul {
   /* line 2, /Applications/MAMP/htdocs/palash/cl/july 2019/189 travel/189 travel html/sass/_footer.scss */
   .footer_part {
     padding: 80px 0px 25px;
+    position: relative;
+    background-color: #00c0ff;
   }
 }
 
