--- a/userapp/templates/login.html
+++ b/userapp/templates/login.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <body class="bg-dark">
-
-    <div class="container">
+    <br><br><br>
+    <div class="container" style="margin: 0 auto;">
         <div class="card card-login mx-auto mt-5">
             <div class="card-header">Login</div>
             <div class="card-body">
@@ -36,4 +36,5 @@
             </div>
         </div>
     </div>
+    <br><br><br>
 {% endblock %}
