--- a/userapp/templates/register.html
+++ b/userapp/templates/register.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <body class="bg-dark">
-
-    <div class="container">
+    <br><br><br>
+    <div class="container" style="margin:0 auto;">
         <div class="card card-register mx-auto mt-5">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
@@ -49,7 +49,8 @@
                             </div>
                             <div class="form-group">
                                 <div class="form-label-group">
-                                    <input name="nickname" type="text" id="nickname" class="form-control" required="required">
+                                    <input name="nickname" type="text" id="nickname" class="form-control" 
+                                            placeholder="Nick-name" required="required">
                                     <label for="address">닉네임</label>
                                 </div>
                             </div>
@@ -83,6 +84,6 @@
             </div>
         </div>
     </div>
-
+<br><br><br>
 
 {% endblock %}
