--- a/templates/base.html
+++ b/templates/base.html
@@ -93,8 +93,8 @@
     <div class="container">
         <hr>
     <div class="row" style="margin:auto;">
-        <h4 style="color:white">Min number 1 </h4><br>
-        <p style="color:white">| 국민 곁의 편리한 민원 파트너 민 넘버 원과 함께 편안한 하루 보내세요!</p>
+        <h4 style="color:white">Min Number One </h4><br>
+        <p style="color:white">| 국민 곁의 편리한 민원 파트너 <b>민 넘버 원</b>과 함께 편안한 하루 보내세요!</p>
     </div>
     <div class="row">
         <div class="col-lg-8">
