인덱스 진짜 최종

--- a/app/templates/min1/index.html
+++ b/app/templates/min1/index.html
@@ -58,16 +58,16 @@
                 <p>편리한 온라인 행정 서비스를 제공하는 
                 <span style="color:#00c0ff">민 넘버 원</span>을 통하여 각 지역에서 발생하는 여러가지 문제점을 공론화하세요!<br>
                 다른 사용자들의 공감과 동의를 얻으면 민원을 의회로 전송하여 특정한 행정 조치를 요구할 수 있습니다.<br>
-                관심사를 정하여 다른 지역에서 발생하는 문제점을 알아보고, 투표에 참여하세요!<br>
+                관심사를 정하여 다른 지역에서 발생하는 문제점을 알아보고, 투표에 참여하며 의견을 드러내세요!<br>
                 자율적인 민주시민으로 가는 지름길, 민 넘버 원입니다.<br>
                 </p>
             </div>
             <div id="info">
-                <h3 style="color:#00c0ff">심사 절차</h3>
-                <img src="{% static 'img/process.png' %}" size="80%">
+                <h2 style="color:#00c0ff">심사 절차</h2>
+                <img src="{% static 'img/process.png' %}" height=140 width=750>
             </div>
             <div id="info">
-                <h3 style="color:#00c0ff">의회 제출 요건</h3>
+                <h2 style="color:#00c0ff">의회 제출 요건</h2>
                 <p>
                 1. 해당 지역 거주자의 30% 이상이 투표에 참여<br>
                 2. 투표 참여자의 70% 이상이 4(심각함) 혹은 5(매우 심각함) 선택<br>
