--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>travel</title>
+    <title>Min number One</title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -71,6 +71,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">문의</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'reported'%}">Reporterd</a>
                             </li>
                         </ul>
                     </div>
