--- a/app/templates/app/area_posts.html
+++ b/app/templates/app/area_posts.html
@@ -12,7 +12,7 @@
  <!--================Blog Area =================-->
 
  <!-- breadcrumb start-->
- {% for post in all_posts %}
+ {% for post in area_posts %}
  <section class="blog_area padding_top">
     <div class="container">
         <div class="row">
