--- a/app/templates/app/write.html
+++ b/app/templates/app/write.html
@@ -23,11 +23,10 @@ button{
     <div class="form-group">
         <label for="exampleFormControlSelect1">민원 유형을 골라주세요!</label>
         <select class="form-control" id="exampleFormControlSelect1" name = "category">
-        <option value = "유형1">1</option>
-        <option value = "유형2">2</option>
-        <option value = "유형3">3</option>
-        <option value = "유형4">4</option>
-        <option value = "유형5">5</option>
+        <option value = "환경">환경</option>
+        <option value = "보건">보건</option>
+        <option value = "육아">육아</option>
+        <option value = "교육">교육</option>
         </select>
     </div>
     <div class = "form-group">
