--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,8 @@
             font-style: normal; 
             }
     </style>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -66,10 +67,15 @@
                                         role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         지역별 민원보기
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                        <a class="dropdown-item" href="elements.html">지역1</a>
-                                        <a class="dropdown-item" href="elements.html">지역2</a>
-                                    </div>
+                                    <form action = "{% url 'app:area_posts' %}" method = "POST">
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1" name = "area">
+                                            <a class="dropdown-item" href="#">종로구</a>
+                                            <a class="dropdown-item" href="#">강남구</a>
+                                            <a class="dropdown-item" href="#">강동구</a>
+                                            <a class="dropdown-item" href="#">노원구</a>
+                                            <a class="dropdown-item" href="#">은평구</a>
+                                        </div>
+                                    </form>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">문의</a>
