--- a/userapp/templates/base.html
+++ b/userapp/templates/base.html
@@ -22,8 +22,9 @@
     <link href="{% static 'css/sb-admin.min.css' %}" rel="stylesheet">
 
     <!-- Card CSS -->
-{#    <link href="{% static 'www/css/small-card.css' %}" rel="stylesheet">#}
+    <link href="{% static 'www/css/small-card.css' %}" rel="stylesheet">
     <link href="{% static 'css/blog-cards.css' %}" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
 
 </head>
