--- a/templates/base.html
+++ b/templates/base.html
@@ -65,25 +65,38 @@
                                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     지역별 민원보기
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                    <a class="dropdown-item" href="elements.html">종로구</a>
-                                    <a class="dropdown-item" href="elements.html">강남구</a>
-                                    <a class="dropdown-item" href="elements.html">강서구</a>
-                                </div>
+                                <form action = "{% url 'app:area_posts' %}" method = "POST">
+                                    {%csrf_token%}
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown1" >
+                                        <input type = "submit" class="dropdown-item" value = "종로구" name = "area">
+                                        <input type = "submit" class="dropdown-item" value = "강동구"  name = "area">
+                                        <input type = "submit" class="dropdown-item" value = "노원구"  name = "area">
+                                        <input type = "submit" class="dropdown-item" value = "강남구"  name = "area">
+                                        <input type = "submit" class="dropdown-item" value = "은평구"  name = "area">
+                                    </div>
+                                </form>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">문의</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'reported'%}">Reporterd</a>
-                            </li>
+                            
                         </ul>
                     </div>
-                    {% if user.is_activate %}
-                    <!--{{user.username}}님 -->환영합니다!
-                    {% else%}
-                    <a class="btn_1 d-none d-lg-block" href="{% url 'login'%}">로그인</a>
+                    {% if user.is_authenticated %}
+                        <a class="btn_1 d-none d-lg-block">{{ user.username }}님 환영합니다.</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="btn_1 d-none d-lg-block" href="#">내 정보 보기</a>
+                        <a class="btn_1 d-none d-lg-block" href="#" data-toggle="modal" data-target="#logoutModal">로그아웃 하기</a>
+                    {% else %}
+                        <a class="btn_1 d-none d-lg-block" href="{% url 'login' %}">로그인 하기</a>
+                        <a class="btn_1 d-none d-lg-block" href="{% url 'register' %}">회원가입 하기</a>
                     {% endif %}
+
+                    <!-- {% if user.is_activate %} -->
+                    <!--{{user.username}}님 -->환영합니다!
+                    <!-- {% else%}
+                    <a class="btn_1 d-none d-lg-block" href="{% url 'login'%}">로그인</a>
+                    {% endif %} -->
                 </nav>
             </div>
         </div>
@@ -93,25 +106,7 @@
 {% block content %}
 {% endblock %}
  
-<!--::footer_part start::-->
-<footer class="footer_part">
-    <div class="container">
-        <hr>
-    <div class="row" style="margin:auto;">
-        <h4 style="color:white">Min Number One </h4><br>
-        <p style="color:white">| 국민 곁의 편리한 민원 파트너 <b>민 넘버 원</b>과 함께 편안한 하루 보내세요!</p>
-    </div>
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="copyright_text">
-                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-            </div>
-        </div>
-    </div>
-    </div>
-</footer>
+
 <!--::footer_part end::-->
 
 <!-- jquery plugins here-->
